# fastapi-worker-motion-fix

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  audio_processor.py  main.py  models.py  workers.py
tests/: test_motion_effect.py
